Fix after shoot buttons being desaligned in desktop resolutions

--- a/src/components/actionButtons/ActionButtons.css
+++ b/src/components/actionButtons/ActionButtons.css
@@ -29,9 +29,9 @@
 .actionButtonContainer {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 560px;
   visibility: hidden;
-  padding: 0 88px 0 0;
+  padding: 0 80px 0 0;
   box-sizing: border-box;
 }
 
