--- a/src/components/searchResults/Results.css
+++ b/src/components/searchResults/Results.css
@@ -1,6 +1,6 @@
 .results {
   width: 560px;
-  padding: 0 88px 0 0;
+  padding: 0 80px 0 0;
   box-sizing: border-box;
 }
 
